<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#EEEEEE"
        android:gravity="end|center_vertical"
        android:padding="16dp"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_history"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintTop_toBottomOf="@id/btn_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Linha 1 -->
        <Button style="@style/CalcButton" android:text="@string/btn_7" />
        <Button style="@style/CalcButton" android:text="@string/btn_8" />
        <Button style="@style/CalcButton" android:text="@string/btn_9" />
        <Button style="@style/CalcButton" android:text="@string/btn_divide" />

        <!-- Linha 2 -->
        <Button style="@style/CalcButton" android:text="@string/btn_4" />
        <Button style="@style/CalcButton" android:text="@string/btn_5" />
        <Button style="@style/CalcButton" android:text="@string/btn_6" />
        <Button style="@style/CalcButton" android:text="@string/btn_multiply" />

        <!-- Linha 3 -->
        <Button style="@style/CalcButton" android:text="@string/btn_1" />
        <Button style="@style/CalcButton" android:text="@string/btn_2" />
        <Button style="@style/CalcButton" android:text="@string/btn_3" />
        <Button style="@style/CalcButton" android:text="@string/btn_subtract" />

        <!-- Linha 4 -->
        <Button style="@style/CalcButton" android:text="@string/btn_0" />
        <Button style="@style/CalcButton" android:text="@string/btn_decimal_point" />
        <Button style="@style/CalcButton" android:text="@string/btn_clear" />
        <Button style="@style/CalcButton" android:text="@string/btn_add" />

        <!-- Linha 5 -->
        <Button
            style="@style/CalcButton"
            android:layout_columnSpan="4"
            android:text="@string/btn_equals"
            android:layout_width="wrap_content" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
